Final assignment reports

--- a/Final assignment/Final Assignment.ipynb
+++ b/Final assignment/Final Assignment.ipynb
@@ -6869,7 +6869,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that, like in Buenos Aires, from k = 5, the distortion reduction is considerably low."
+    "We see that from k = 5, the distortion reduction is considerably low."
    ]
   },
   {
